--- a/css/style.css
+++ b/css/style.css
@@ -250,7 +250,11 @@ body {
     cursor: pointer;
     margin: 17px;
     margin-top: 40px;
+    transition: all 300ms;
+}
 
+.card:hover{
+    background: black;
 }
 
 .card .icon {
@@ -261,6 +265,22 @@ body {
     line-height: 110px;
     text-align: center;
     margin: 0px auto;
+    transition: all 300ms;
+}
+
+.card:hover .icon{
+    font-size: 70px;
+    color: #37bcf9;
+    animation: showIcon 300ms linear;
+}
+
+@keyframes showIcon{
+    from{
+        transform: translateY(-200%);
+    }
+    to{
+        transform: translateY(0%);
+    }
 }
 
 .card .category {
@@ -271,6 +291,23 @@ body {
     font-weight: lighter;
     text-align: center;
     color: #00538c;
+    transition: all 300ms;
+}
+
+.card:hover .category{
+    color: white;
+    animation: showCategory 400ms linear;
+}
+
+@keyframes showCategory{
+    from{
+        transform: translateY(-300%);
+        color: black;
+    }
+    to{
+        transform: translateY(0%);
+        color:white;
+    }
 }
 
 .card .description {
@@ -278,6 +315,23 @@ body {
     text-align: center;
     color: #0689e0;
     font-size: 15px;
+    transition: all 300ms;
+}
+
+.card:hover .description{
+    color: white;
+    animation: showDescription 400ms linear;
+}
+
+@keyframes showDescription{
+    from{
+        transform: translateX(-300%);
+        color: black;
+    }
+    to{
+        transform: translateX(0%);
+        color: white;
+    }
 }
 
 /*fin css de tarjetas*/
@@ -458,13 +512,14 @@ padding-left: 6px;
 /*inicio articulos*/
 
 #articles {
-    width: 860px;
+    width: 900px;
     float: left;
+    margin-left: 100px;
 }
 
 #articles h2 {
     display: block;
-    width: 100%;
+    width: 102%;
     height: 75px;
     line-height: 75px;
     text-align: center;
